Rename template element to project name

--- a/documentation/requirements_document.tex
+++ b/documentation/requirements_document.tex
@@ -25,7 +25,7 @@
 \usepackage{rotating}
 
 \title{Requirements}
-\author{Foo Ever}
+\author{Maxime Haselbauer}
 \addbibresource{./library.bib} %define so to work with mendeley',
 \setlength{\parindent}{0pt}                % Avoid indentation on the first line',
 \makeindex
@@ -35,10 +35,11 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-This is abstract
+Set of requirments for a simple STM32 hello world project
 \end{abstract}
 \printnomenclature
 \printglossaries
+
 
 \nomenclature{$a$}{The variable a}
 
@@ -49,7 +50,7 @@ This is how to use the \gls{FAlabel}. And now making a second use of \gls{FAlabe
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.75 \textwidth]{resources/project_or_company_logo.png}
+	\includegraphics[width=0.75 \textwidth]{resources/project_logo.png}
 	\caption{caption}
 	\label{reference}
 \end{figure}
