Improve CONTRIBUTING.md

--- a/documentation/requirements_engineering/requirements_document.tex
+++ b/documentation/requirements_engineering/requirements_document.tex
@@ -36,7 +36,7 @@
 
 
 \title{Requirements}
-\author{Maxime Haselbauer}
+\author{John Doe}
 \addbibresource{./library.bib} %define so to work with mendeley',
 \setlength{\parindent}{0pt}                % Avoid indentation on the first line',
 \makeindex
@@ -46,7 +46,7 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-Set of requirments for a simple STM32 hello world project
+Set of requirements for a basic STM32 project.
 \end{abstract}
 \printnomenclature
 \printglossaries
