Cleaning unecessary comments

--- a/documentation/requirements_engineering/parameters.tex
+++ b/documentation/requirements_engineering/parameters.tex
@@ -1,7 +1,7 @@
 \newglossary[plg]{parameters}{pmt}{ptn}{List of Parameters}
 
-\newparameter{aebsafetydistance}{aeb\_safety\_distance}{Minimum, safety distance between ego and target once the ego is stopped
+\newparameter{somedistance}{some\_distance}{Example of a parameter that is a distance.
 \parametertype{Float}{3.0}{0.0}{10.0}{0.1}}
 
-\newparameter{warningduration}{fcw\_warning\_duration}{Duration of audio warning prior to the \gls{AEB} enagement
+\newparameter{someduration}{some_duration}{Example of a parameter that is a duration
 \parametertype{Float}{0.9}{0.0}{5.0}{0.1}}
