Cleaning unecessary comments

--- a/documentation/requirements_engineering/requirements_document.tex
+++ b/documentation/requirements_engineering/requirements_document.tex
@@ -12,14 +12,14 @@
 \usepackage[top=2cm,bottom=2cm,left=3cm,right=2cm]{geometry}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{setspace}
-\usepackage{fixltx2e}     % to get subscript',
+\usepackage{fixltx2e}
 \usepackage[style=numeric,backend=biber]{biblatex}
 \usepackage[acronym]{glossaries}
 \usepackage{makeidx}
-\usepackage{nomencl}      %Variable nomenclature
+\usepackage{nomencl}
 \usepackage{textcomp}
 \usepackage{sfmath}
-\usepackage{booktabs}     %to get bottomrule top rule and middlerun in tabular',
+\usepackage{booktabs}
 \usepackage{algorithm}
 \usepackage{algorithmic}
 \usepackage{rotating}
@@ -37,8 +37,8 @@
 
 \title{Requirements}
 \author{John Doe}
-\addbibresource{./library.bib} %define so to work with mendeley',
-\setlength{\parindent}{0pt}                % Avoid indentation on the first line',
+\addbibresource{./library.bib}
+\setlength{\parindent}{0pt}
 \makeindex
 \makenomenclature
 \makeglossaries
