Convert plantuml diagram automatically to png This way they easily be integrated into the documentation.

--- a/documentation/requirements_engineering/use_cases.tex
+++ b/documentation/requirements_engineering/use_cases.tex
@@ -1,1 +1,10 @@
 \usecase{Destkop client stays alive if device not connected}{001}{The desktop application is launched by there is no device connected. It stays on and wait until a device is connected.}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=1.0 \textwidth]{./diagrams/pc_mcu_interaction_diagram.png}
+	\caption{PC-MCU interaction diagram}
+	\label{fig_pc_mcu_interaction}
+\end{figure}
+
+out
